--- a/config.json
+++ b/config.json
@@ -84,7 +84,15 @@
             "outbounds": [
                 "\u2764\ufe0fBest Latency\u2764\ufe0f",
                 "Warp-IR",
-                "Warp-IR_1"
+                "Warp-IR_1",
+                "Warp-IR_2",
+                "Warp-IR_3",
+                "Warp-IR_4",
+                "Warp-IR_5",
+                "Warp-IR_6",
+                "Warp-IR_7",
+                "Warp-IR_8",
+                "Warp-IR_9"
             ]
         },
         {
@@ -92,7 +100,15 @@
             "type": "urltest",
             "outbounds": [
                 "Warp-IR",
-                "Warp-IR_1"
+                "Warp-IR_1",
+                "Warp-IR_2",
+                "Warp-IR_3",
+                "Warp-IR_4",
+                "Warp-IR_5",
+                "Warp-IR_6",
+                "Warp-IR_7",
+                "Warp-IR_8",
+                "Warp-IR_9"
             ],
             "url": "https://detectportal.firefox.com/success.txt",
             "interval": "60s",
@@ -106,8 +122,8 @@
                 "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
             ],
             "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
-            "server": "188.114.97.116",
-            "server_port": 8742,
+            "server": "188.114.98.255",
+            "server_port": 878,
             "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
             "reserved": "AAAA",
             "domain_strategy": "",
@@ -122,8 +138,8 @@
                 "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
             ],
             "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
-            "server": "188.114.97.180",
-            "server_port": 8742,
+            "server": "188.114.97.30",
+            "server_port": 878,
             "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
             "reserved": "AAAA",
             "domain_strategy": "",
@@ -138,8 +154,8 @@
                 "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
             ],
             "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
-            "server": "162.159.192.46",
-            "server_port": 8742,
+            "server": "188.114.96.214",
+            "server_port": 2506,
             "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
             "reserved": "AAAA",
             "domain_strategy": "",
@@ -154,8 +170,8 @@
                 "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
             ],
             "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
-            "server": "188.114.96.202",
-            "server_port": 928,
+            "server": "162.159.195.35",
+            "server_port": 878,
             "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
             "reserved": "AAAA",
             "domain_strategy": "",
@@ -170,8 +186,8 @@
                 "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
             ],
             "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
-            "server": "188.114.98.144",
-            "server_port": 8742,
+            "server": "188.114.96.120",
+            "server_port": 2506,
             "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
             "reserved": "AAAA",
             "domain_strategy": "",
@@ -186,8 +202,8 @@
                 "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
             ],
             "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
-            "server": "188.114.98.7",
-            "server_port": 8742,
+            "server": "188.114.99.79",
+            "server_port": 2506,
             "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
             "reserved": "AAAA",
             "domain_strategy": "",
@@ -202,8 +218,8 @@
                 "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
             ],
             "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
-            "server": "162.159.195.251",
-            "server_port": 8742,
+            "server": "162.159.195.133",
+            "server_port": 878,
             "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
             "reserved": "AAAA",
             "domain_strategy": "",
@@ -218,8 +234,8 @@
                 "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
             ],
             "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
-            "server": "162.159.192.243",
-            "server_port": 8742,
+            "server": "188.114.99.240",
+            "server_port": 2506,
             "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
             "reserved": "AAAA",
             "domain_strategy": "",
@@ -234,8 +250,8 @@
                 "2606:4700:110:87fd:d3bc:b060:fc17:171d/128"
             ],
             "private_key": "qEqCVqV+l47lp7aSA+9SZDbdWsmE/eyCil8tmEJokGg=",
-            "server": "188.114.97.72",
-            "server_port": 8742,
+            "server": "188.114.99.36",
+            "server_port": 2506,
             "peer_public_key": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
             "reserved": "AAAA",
             "domain_strategy": "",
